--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             </tr>
             <tr>
                 <td>20</td>
-                <td class="text-left">Tamplate</td>
-                <td><a href="Tamplate.html" class="btn btn-success p-1">Read more</a></td>
+                <td class="text-left">Template</td>
+                <td><a href="Template.html" class="btn btn-success p-1">Read more</a></td>
             </tr>
             <tr>
                 <td>21</td>
