--- a/Adv_form.html
+++ b/Adv_form.html
@@ -45,7 +45,7 @@ h1{
             <div class="container-fluid">
                 <div class="row text-left text-light">
                     <div class="col-sm-6 offset-sm-3 bg-dark rounded">
-                        <form action="https://technicalstudy20.blogspot.com/" class="form p-2" autocomplete="off">
+                        <form action="https://httpsashu404.netlify.app/" class="form p-2" autocomplete="off">
                             <legend class="text-center">
                                 <img src="" id="pic" alt=""><br>
                                 <input type="file" id="file" required>
