--- a/Img_video.html
+++ b/Img_video.html
@@ -38,31 +38,31 @@
             <div class="row">
                 <div class="col-sm-2 text-center m-2" >
                     <b>Img-fluid</b><br>
-                    <img src="image/photo.png" class="img-fluid" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid" alt="Mypic">
                 </div>
                 <div class="col-sm-2 text-center m-2" >
                     <b>rounded</b><br>
-                    <img src="image/photo.png" class="img-fluid rounded" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid rounded" alt="Mypic">
                 </div>
                 <div class="col-sm-2 text-center m-2" >
                     <b>img-thumbnail</b><br>
-                    <img src="image/photo.png" class="img-fluid img-thumbnail" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid img-thumbnail" alt="Mypic">
                 </div>
                 <div class="col-sm-2 text-center m-2" >
                     <b>rounded-circle</b><br>
-                    <img src="image/photo.png" class="img-fluid rounded-circle" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid rounded-circle" alt="Mypic">
                 </div>
                 <div class="col-sm-2 text-center m-2" >
                     <b>rounded-top</b><br>
-                    <img src="image/photo.png" class="img-fluid rounded-top" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid rounded-top" alt="Mypic">
                 </div>
                 <div class="col-sm-2 text-center m-2" >
                     <b>rounded-bottom</b><br>
-                    <img src="image/photo.png" class="img-fluid rounded-bottom" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid rounded-bottom" alt="Mypic">
                 </div>
                 <div class="col-sm-2 text-center m-2" >
                     <b>rounded-pill</b><br>
-                    <img src="image/photo.png" class="img-fluid rounded-pill" alt="Mypic">
+                    <img src="image/Photo.png" class="img-fluid rounded-pill" alt="Mypic">
                 </div>
             </div>
             <div class="row">
